# Joint-VO-SF

./: .gitignore  CMakeLists.txt  CudaComputeTargetFlags.cmake  ElasticFusion.cpp  ElasticFusion.h  GPUTexture.cpp  GPUTexture.h  GUI.h  GlobalModel.cpp  GlobalModel.h  datasets.cpp  datasets.h  ef.h  joint_vo_sf.h  kmeans.cpp  main_vo_sf_camera.cpp  main_vo_sf_datasets.cpp  main_vo_sf_imageseq.cpp  segmentation_background.cpp  solver.cpp  solver.cpp.autosave  superpixels.cpp  superpixels.h  visualization.cpp
Cuda/: cudafuncs.cuh  reduce.cu
Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  Vertex.cpp  copy_unstable.vert  data.vert  init_unstable.vert  splat.vert  surfels.glsl  update.vert  update2.vert
Utils/: RGBDOdometry.cpp  RGBDOdometry.h
cmake_modules/: Findefusion.cmake
